# DSPy-Multi-Feature-Chatbot

./: README.md  pyproject.toml
brain/: chat_interface.py  knn_optimization.ipynb  knn_optimization_with_context.ipynb  models.py  topic_filtering.ipynb
brain/lms/: together.py
brain/modules/: chatter.py  responder.py
brain/saved_models/: optimized_chatbot_with_context.json  optimized_knn_2_no_context.json
brain/signatures/: responder.py
training_data/: conversation_with_context.json  conversations.json
